[package]
name = "tREx_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
jsonwebtoken = "8"
rsa = { version = "0.8.1", features = ["pkcs5"]}
rand = "0.8"
serde = "1"
serde_json = "1"
